# NMPC-test

./: .gitignore  CMakeLists.txt  NMPC_cartpole.m  NMPC_test.m  README.md  mpc_controller.c  mpc_controller.h  mujoco_mpc_cartpole_specific.cpp  nmpc_cartpole_robust.cpp
xml/: cartpole.xml
